--- a/MailChimp.Net/MailChimp.Net.csproj
+++ b/MailChimp.Net/MailChimp.Net.csproj
@@ -31,7 +31,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyOriginatorKeyFile>MailChimp.Key.snk</AssemblyOriginatorKeyFile>
     <PackageId>MailChimp.Net.V3</PackageId>
-    <Version>3.2.1</Version>
+    <Version>3.2.2</Version>
     <Authors>Brandon Seydel</Authors>
     <Company>DevSquad</Company>
     <Product>MailChimp.Net.V3</Product>
@@ -39,13 +39,13 @@
     <Description>A .NET Wrapper for Mail Chimp v3.0 API</Description>
     <Summary>A very fast, thin, and intuitive .NET Wrapper for the Mail Chimp v3.0 API.</Summary>
     <Copyright>Copyright © 2018</Copyright>
-    <PackageProjectUrl>https://github.com/brandonseydel/MailChimp.Net</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/brandonseydel/MailChimp.Net</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/2m0nd/MailChimp.Net</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/2m0nd/MailChimp.Net</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <NeutralLanguage />
     <PackageReleaseNotes>.NET Standard 1.3</PackageReleaseNotes>
     <PackageIconUrl>http://developer.mailchimp.com/documentation/mailchimp/img/freddie_o.svg</PackageIconUrl>
-    <PackageTags>MailChimp Mail Chimp 3.0 v3.0 MailChimp.Net.V3 MailChimpv3.0 MailChimpv3 MailChimp3</PackageTags>
+    <PackageTags>MailChimp Mail Chimp api v3</PackageTags>
     <PackageLicenseUrl>https://github.com/brandonseydel/MailChimp.Net/blob/master/LICENSE.txt</PackageLicenseUrl>
     <AssemblyVersion>3.2.1.0</AssemblyVersion>
     <FileVersion>3.2.1.0</FileVersion>
